--- a/styles.css
+++ b/styles.css
@@ -77,13 +77,14 @@ h1
 {
    width: 800px;
    height: auto;
-   margin-top: 350px;
+   margin-top: 80px;
    margin-left: 280px;         
 }
 
 
 p
 {
+    
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-size: 20px;
@@ -129,7 +130,138 @@ p
     border: 1px solid white;
 }
 
-@media (max-width: 1365px)
+.main-table
+{
+    margin-top: 300px;
+   margin-left: 450px;
+   position: relative;
+    padding-top: 60px;
+    background-color: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+table
+{
+    margin-bottom: 100px;
+    width: 100%;
+}
+
+  th, td {
+    font-weight: unset;
+    padding-right: 10px;
+  }
+  
+  .column1 {
+    width: 33%;
+    padding-left: 65px;
+  }
+  
+  .column2 {
+    width: 13%;
+    padding-right: 30px;
+  }
+  
+  .column3 {
+    width: 22%;
+    padding-right: 30px;
+    padding-left: 20px;
+  }
+  
+  
+  .table-head th {
+    padding-top: 18px;
+    padding-bottom: 18px;
+    padding-left: 12px;
+  }
+  
+  .table-body td {
+    padding-top: 35px;
+    padding-bottom: 0px;
+  }
+  
+  
+  
+  .table-head {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+  
+  .table-body {
+    max-height: 430px;
+    overflow: auto;
+  }
+
+  .main-table th {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    color: #fff;
+    line-height: 1;
+  
+    background-color: #6c7ae0;
+  }
+  
+  .main-table td {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #6b6565;
+    line-height: 1.8;
+  }
+  
+  .row-head
+  {
+    font-weight: bold;
+  }
+  
+  .table-body .row-body .column1
+  {
+      font-weight: bold;
+  }
+
+
+  .X{
+
+    padding: 100px, 200px;
+    max-width: 100%;
+    margin-top: 60px;
+    margin-left: 30px;
+  }
+  h2{
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  li{
+    position: relative;
+    color: #062747;
+    font-size: 18px;
+    line-height: 30px;
+    text-align: left;
+    letter-spacing: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .symp
+  {
+      list-style-type: disc;
+    }
+  .stay
+  {
+      margin-top: 60px;
+      margin-bottom: 80px;
+  }
+
+  .Y
+{
+    position: relative;
+
+}  
+pre
+{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media only screen and (max-width: 1365px)
 {
     header
 {
@@ -143,7 +275,7 @@ p
 {
     float: left;
     list-style: none;
-    margin-left: 100px;
+    margin-left: 415px;
     margin-top:50px;
 }
 
@@ -156,7 +288,7 @@ p
 {
     color: white;
     text-decoration: none;
-    padding: 7px 10px;
+    padding: 10px 25px;
     font-family: "Roboto", sans-serif;
     font-size: 52px;
 }
@@ -206,7 +338,7 @@ p
 {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
-    font-size: 72px;
+    font-size: 62px;
     width: 1200px;
     text-align: left;
     margin-top: 80;
