--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header
     background-image:url(Background.jpg);
     height: 100vh;
     background-size: cover;
-    background-position: center;
+    background-position: absolute;
 
 }
 .main-nav
@@ -49,14 +49,14 @@ body
 .row
 {
     max-width: 1200px;
-    margin: auto;
+    margin-left: auto;
 
 }
 
 .hero
 {
-    position: absolute;
-    width: 900px;
+    position: relative;
+    width: 1100px;
     margin-left: 0px;
     margin-top: 0px;
 
@@ -64,29 +64,33 @@ body
 
 h1
 {
+    position: relative;
     color: white;
     text-transform: uppercase;
     font-size: 100px;
+    padding-top: 250px;
     text-align: center;
-    margin-top: 280px;
-    margin-left: 400px;
+    margin-top: 0px;
+    margin-left: 240px;
 }
 
 .pre img
 
 {
+    position: relative;
    width: 800px;
    height: auto;
    margin-top: 80px;
-   margin-left: 280px;         
+   margin-left: 280px;    
+   margin-bottom: 20px;     
 }
 
 
 p
 {
-    
+    position: relative;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: #04040c;
     font-size: 20px;
     width: 1200px;
     text-align: left;
@@ -94,7 +98,7 @@ p
     margin-left: 70;
 }
 .button
-{
+{   position: relative;
     margin-top: 80px;
     margin-left: 600px;
     margin-bottom: 80px;
@@ -132,18 +136,21 @@ p
 
 .main-table
 {
-    margin-top: 300px;
-   margin-left: 450px;
-   position: relative;
-    padding-top: 60px;
+    
+    margin: 0px auto;
+    margin-top: 330px;
+    margin-left: 260px;
+    position: center;
+    padding-top: 0px;
     background-color: #fff;
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 0 0px 40px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0px 4px 0px rgba(0, 0, 0, 0.15);
 }
 table
-{
-    margin-bottom: 100px;
+{   
+    
+    margin-bottom: 42px;
     width: 100%;
 }
 
@@ -153,16 +160,30 @@ table
   }
   
   .column1 {
-    width: 33%;
-    padding-left: 65px;
+    width: 22%;
+    padding-left: 24px;
+    padding-right: 22px;
+    text-align: center;
   }
   
   .column2 {
     width: 13%;
-    padding-right: 30px;
+    padding-right: 20px;
   }
   
   .column3 {
+    width: 22%;
+    padding-right: 30px;
+    padding-left: 20px;
+  }
+
+  .column4 {
+    width: 22%;
+    padding-right: 30px;
+    padding-left: 20px;
+  }
+
+  .column5 {
     width: 22%;
     padding-right: 30px;
     padding-left: 20px;
@@ -176,21 +197,23 @@ table
   }
   
   .table-body td {
-    padding-top: 35px;
+    
+    padding-top: 20px;
     padding-bottom: 0px;
   }
   
   
   
   .table-head {
-    position: absolute;
+    
+    position: left;
     width: 100%;
     top: 0;
     left: 0;
   }
   
   .table-body {
-    max-height: 430px;
+    max-height: 400px;
     overflow: auto;
   }
 
@@ -198,15 +221,15 @@ table
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     color: #fff;
-    line-height: 1;
+    line-height: 1.2;
   
-    background-color: #6c7ae0;
+    background-color:#EA161D;
   }
   
   .main-table td {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    color: #6b6565;
+    color: #04040c;
     line-height: 1.8;
   }
   
@@ -220,13 +243,20 @@ table
       font-weight: bold;
   }
 
+  .row-body td
+  {
+    text-align: center;
+  }
+  
+ 
+
 
   .X{
-
+    position: relative;
     padding: 100px, 200px;
     max-width: 100%;
     margin-top: 60px;
-    margin-left: 30px;
+    margin-left: 80px;
   }
   h2{
     text-align: left;
@@ -234,7 +264,7 @@ table
   }
   li{
     position: relative;
-    color: #062747;
+    color: #04040c;
     font-size: 18px;
     line-height: 30px;
     text-align: left;
@@ -257,7 +287,7 @@ table
 
 }  
 pre
-{
+{   position: relative;
     font-family: Arial, Helvetica, sans-serif;
 }
 
